--- a/src/components/Card/PreiseCard.astro
+++ b/src/components/Card/PreiseCard.astro
@@ -125,11 +125,12 @@ const {
     .card {
         flex: 1 0 20rem;
         max-width: min(100%, 27rem);
-        @apply w-full;
+        width: 100%;
     }
     [data-icon] {
         max-width: 15rem;
-        @apply py-1 w-full;
+        padding: 0.25rem;
+        width: 100%;
     }
     a {
         text-decoration: none;
