--- a/src/components/Card/PreiseCard.astro
+++ b/src/components/Card/PreiseCard.astro
@@ -125,12 +125,11 @@ const {
     .card {
         flex: 1 0 20rem;
         max-width: min(100%, 27rem);
-        width: 100%;
+        @apply w-full;
     }
     [data-icon] {
         max-width: 15rem;
-        padding: 0.25rem;
-        width: 100%;
+        @apply py-1 w-full;
     }
     a {
         text-decoration: none;
