--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -15,7 +15,7 @@ const {
 ---
 
 <span id="date" aria-hidden="true" style="display: none;">{date}</span>
-<div class="flex w-full justify-center items-center gap-3 flex-wrap">
+<div class="flex w-full justify-center items-center gap-3 flex-wrap mt-12">
     <h2 class="text-6xl font-extrabold">Noch</h2>
     <div
         class="grid auto-cols-max grid-flow-col gap-5 text-center text-xs sm:text-lg"
