--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Sponsors from "components/Index/Sponsors.astro";
             <Verlinkung href="/job" label="Ferienjob" classes="btn-secondary" />
         </div>
     </LandingLogo>
-    <!--Erst 99 Tage vor Saisonstart-->
+    <!--Erst 99 Tage vor Saisonstart
     <Countdown
         title="Saisonstart"
         date="2025-05-30T18:00:00"
@@ -31,6 +31,7 @@ import Sponsors from "components/Index/Sponsors.astro";
     >
         Die Saison startet am 30. Mai 2025.
     </Countdown>
+    
     <a
         role="button"
         href="/veranstaltungen#start"
@@ -47,9 +48,12 @@ import Sponsors from "components/Index/Sponsors.astro";
             ></path></svg
         >
     </a>
+    -->
 
     <Accordion />
+    <!-- Beta
     <Sponsors />
+     -->
     <OSM className="full-width" />
     <Kurse />
 </MainLayout>
