--- a/src/components/Kurse/Kurse.astro
+++ b/src/components/Kurse/Kurse.astro
@@ -1,98 +1,104 @@
 ---
 import { Icon } from "astro-icon/components";
-import KurseEntries from "./KurseEntries.astro";
-import KurseItem from "./KurseItem.astro";
+import PreiseCard from "components/Card/PreiseCard.astro";
 ---
 
 <section>
-  <h2><span>Schwimmkurse</span> im Freibad Delligsen</h2>
-
-  <!--Seepferd -->
-  <KurseItem titel="Seepferdchen" svg="seepferd" id="1">
-    <KurseEntries h3="Gruppengröße:" p="max. 8 Kinder" />
-    <KurseEntries h3="Alter der Kinder:" p="ab 6 Jahren" />
-    <KurseEntries
-      h3="Kosten:"
-      p="Anmeldegebühr 40€ & für jede Stundenteilnahme 4€"
-    />
-    <KurseEntries h3="Beginn des Kurses:" p="Ende Juni 2024" />
-  </KurseItem>
-  
-  <!--Bronze -->
-  <KurseItem titel="Bronze" svg="bronze" id="2">
-    <KurseEntries h3="Gruppengröße:" p="max. 8 Kinder" />
-    <KurseEntries
-      h3="Zielgruppe:"
-      p="Alle Kinder, die bereits das Seepferdchen erworben haben."
-    />
-    <KurseEntries
-      h3="Kosten:"
-      p="Anmeldegebühr 25€ & für jede Stundenteilnahme 4€"
-    />
-    <KurseEntries h3="Beginn des Kurses:" p="Ende Juni 2024" />
-  </KurseItem>
-
-  <div class="anmeldung">
-    <p>
-      Anmeldung:
-      <a href="mailto:alice.moeller@t-online.de">
-        <Icon name="IcRoundEmail" />
-        alice.moeller@t-online.de</a
-      >
-    </p>
-    <p class="red">
-      Änderungen des Schwimmkursbeginns sind wetterbedingt m&ouml;glich!!!
-    </p>
-    <br />
-  </div>
+    <h2><span class="fancy_span">Schwimmkurse</span> im Freibad Delligsen</h2>
+    <div class="flex flex-wrap gap-x-6 gap-y-4">
+        <PreiseCard
+            title="Seepferdchen"
+            icon="seepferd"
+            color="orange"
+            badge_top=""
+            badge_bottom=""
+            pos1="Gruppengröße:"
+            pos1_num="max. 8 Kinder"
+            pos2="Zielgruppe:"
+            pos2_num="Alle Kinder, die an Wasser gewöhnt sind"
+            pos3="Kosten"
+            pos3_num="Anmeldegebühr 40€ & für jede Stundenteilnahme 4€"
+            pos4="Beginn des Kurses:"
+            pos4_num="08.07.2024"
+            width_type="fit"
+        />
+        <PreiseCard
+            title="Bronze"
+            icon="bronze"
+            color="#9AC7F7"
+            badge_top=""
+            badge_bottom=""
+            pos1="Gruppengröße:"
+            pos1_num="max. 8 Kinder"
+            pos2="Zielgruppe:"
+            pos2_num="Alle Kinder, die bereits das Seepferdchen erworben haben"
+            pos3="Kosten"
+            pos3_num="Anmeldegebühr 25€ & für jede Stundenteilnahme 4€"
+            pos4="Beginn des Kurses:"
+            pos4_num="08.07.2024"
+            width_type="fit"
+        />
+    </div>
+    <div class="anmeldung">
+        <p>
+            Anmeldung:
+            <a href="mailto:alice.moeller@t-online.de">
+                <Icon name="IcRoundEmail" />
+                alice.moeller@t-online.de</a
+            >
+        </p>
+        <p class="red">
+            Änderungen des Schwimmkursbeginns sind wetterbedingt m&ouml;glich!!!
+        </p>
+        <br />
+    </div>
 </section>
-
 <style>
-  section {
-    max-width: var(--site-width);
-    width: 100%;
-    margin-inline: auto;
-  }
+    section {
+        max-width: var(--site-width);
+        width: 100%;
+        margin-inline: auto;
+    }
 
-  h2 {
-    color: var(--text);
-    padding-block: 3rem;
-    text-align: center;
-    font-size: 20pt;
-    letter-spacing: -1px;
-    font-weight: 700;
-    font-size: clamp(2.2rem, 1.4551rem + 1.3061vw, 2.7rem);
-  }
-  span {
-    background: linear-gradient(120deg, var(--primary), var(--accent));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+    h2 {
+        color: var(--text);
+        padding-block: 3rem;
+        text-align: center;
+        font-size: 20pt;
+        letter-spacing: -1px;
+        font-weight: 700;
+        font-size: clamp(2.2rem, 1.4551rem + 1.3061vw, 2.7rem);
+    }
+    .fancy_span {
+        background: linear-gradient(120deg, var(--primary), var(--accent));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 
-  .anmeldung {
-    margin-top: 30px;
-    width: 100%;
-    text-align: center;
-  }
+    .anmeldung {
+        margin-top: 30px;
+        width: 100%;
+        text-align: center;
+    }
 
-  p:first-child {
-    font-size: x-large;
-    color: var(--text);
-  }
+    p:first-child {
+        font-size: x-large;
+        color: var(--text);
+    }
 
-  .red {
-    color: rgb(138, 2, 2);
-  }
+    .red {
+        color: rgb(138, 2, 2);
+    }
 
-  a {
-    text-decoration: none;
-    color: var(--text);
-  }
+    a {
+        text-decoration: none;
+        color: var(--text);
+    }
 
-  [data-icon] {
-    display: inline-block;
-    height: 24px;
-    vertical-align: bottom;
-    font-size: 24px !important;
-  }
+    [data-icon] {
+        display: inline-block;
+        height: 24px;
+        vertical-align: bottom;
+        font-size: 24px !important;
+    }
 </style>
