--- a/src/components/Kurse.astro
+++ b/src/components/Kurse.astro
@@ -16,10 +16,10 @@ import PreiseCard from "components/Card/PreiseCard.astro";
             pos1_num="max. 8 Kinder"
             pos2="Zielgruppe:"
             pos2_num="Alle Kinder, die an Wasser gewöhnt sind"
-            pos3="Kosten"
+            pos3="Kosten:"
             pos3_num="Anmeldegebühr 40€ & für jede Stundenteilnahme 4€"
             pos4="Beginn des Kurses:"
-            pos4_num="08.07.2024"
+            pos4_num="08.07.2025"
             width_type="fit"
         />
         <PreiseCard
@@ -32,10 +32,10 @@ import PreiseCard from "components/Card/PreiseCard.astro";
             pos1_num="max. 8 Kinder"
             pos2="Zielgruppe:"
             pos2_num="Alle Kinder, die bereits das Seepferdchen erworben haben"
-            pos3="Kosten"
+            pos3="Kosten:"
             pos3_num="Anmeldegebühr 25€ & für jede Stundenteilnahme 4€"
             pos4="Beginn des Kurses:"
-            pos4_num="08.07.2024"
+            pos4_num="08.07.2025"
             width_type="fit"
         />
     </div>
