--- a/src/components/Nav/NavbarItem.astro
+++ b/src/components/Nav/NavbarItem.astro
@@ -24,7 +24,7 @@ import { Icon } from "astro-icon/components";
 
 <style>
     a {
-        @apply font-semibold text-lg lg:px-2;
+        @apply font-semibold text-lg lg:px-2 no-underline;
     }
     [data-icon] {
         display: none;
