--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -66,6 +66,12 @@ const {
         <!-- <script src="../js/nav.js"></script> -->
 
         <ClientRouter />
+
+        <!-- Analytics -->
+        <script
+        src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
+        data-app-id="1F5C1629-58E5-40D3-8477-2E87A7DCE45C"
+        ></script>
     </head>
     <body>
         <div id="page-container" class="relative bg-base-200">
