--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -18,13 +18,14 @@ const zeiten = (await getCollection("zeiten")).sort(
     description="Aktuelle Öffnungszeiten des Freibads Delligsen"
 >
     <Grid titel="Öffnungszeiten">
-        <!--<Banner
-    id="Heimatfest"
-    title="Geänderte Öffnungszeiten aufgrund des Heimatfestes"
-    icon="LogosPartytownIcon"
+        <Banner
+    id="geändert"
+    title="Geänderte Öffnungszeiten aufgrund des guten Wetters"
+    icon="sun"
+    bg_color="#f9f28b"
   >
-  <p>Samstag (08.06) und Sonntag (09.06) nur von <b> 10 - 12 Uhr</b>. Freitag (07.06) und Montag (10.06) normal von <b>15 -20 Uhr</b>.</p>
-  </Banner>-->
+  <p>Am <b>Donnerstag (14.08)</b> und <b>Freitag (15.08)</b> ist das Freibad von <b>10-12 Uhr</b> und dann <b>15-20 Uhr</b> geöffnet.</p>
+  </Banner>
         <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
         <!--
   <Banner
