--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ import Sponsors from "components/Index/Sponsors.astro";
         <div id="quickLink">
             <!--<<Verlinkung href="/job" label="Ferienjob" classes="btn-secondary" /> -->
             <Verlinkung
-                href="/veranstaltungen/index.html#Poolparty"
-                label="Poolparty"
+                href="/zeiten"
+                label="Erweiterte Öffnungszeiten"
                 classes="btn-primary"
             />
             <Verlinkung
