--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -24,7 +24,7 @@ const zeiten = (await getCollection("zeiten")).sort(
     icon="sun"
     bg_color="#f9f28b"
   >
-  <p>Am <b>Donnerstag (14.08)</b> und <b>Freitag (15.08)</b> ist das Freibad von <b>10-12 Uhr</b> und dann <b>15-20 Uhr</b> geöffnet.</p>
+  <p>Bis einschließlich <b>Freitag (22.08)</b> ist das Freibad von <b>10-12 Uhr</b> und dann <b>15-20 Uhr</b> geöffnet.</p>
   </Banner>
         <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
         <!--
