--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,12 @@ import Sponsors from "components/Index/Sponsors.astro";
 >
     <LandingLogo>
         <div id="quickLink">
-            <!--<<Verlinkung href="/job" label="Ferienjob" classes="btn-secondary" /> -->
+            <!--<<Verlinkung href="/job" label="Ferienjob" classes="btn-secondary" /> 
             <Verlinkung
                 href="/zeiten"
                 label="Erweiterte Öffnungszeiten"
                 classes="btn-primary"
-            />
+            />-->
             <Verlinkung
                 href="/mitglied/"
                 label="Vereinsmitglied werden"
