--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -18,14 +18,14 @@ const zeiten = (await getCollection("zeiten")).sort(
     description="Aktuelle Öffnungszeiten des Freibads Delligsen"
 >
     <Grid titel="Öffnungszeiten">
-        <Banner
+        <!-- <Banner
     id="geändert"
     title="Geänderte Öffnungszeiten aufgrund des guten Wetters"
     icon="sun"
     bg_color="#f9f28b"
   >
   <p>Bis einschließlich <b>Freitag (22.08)</b> ist das Freibad von <b>10-12 Uhr</b> und dann <b>15-20 Uhr</b> geöffnet.</p>
-  </Banner>
+  </Banner>-->
         <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
         <!--
   <Banner
